--- a/css/styles.css
+++ b/css/styles.css
@@ -2,50 +2,44 @@
 body {
     background: #FFF;
     color: #000;
-    font-family: Arial, sans-serif;
-    font-size: 14px;
-}
-
-#header {
-    background: #F5DEB3;
     margin: 0px;
-    width: 100%;
-    height: 40px;
-    position: fixed; /* Фиксированное положение */
-    right: 10px; /* Расстояние от правого края окна браузера */
-    padding: 10px; /* Поля вокруг текста */ 
-    border: 1px solid #333; /* Параметры рамки */
-    text-align: left;
+    font-family: Arial, sans-serif;
+    font-size: 20px;
 }
 
 #container {
     background: #FFD700;
-    margin: auto auto;
+    /* margin: auto auto; */
     text-align: center;
     width: 100%;
-    height: 100%;
+    height: 1500px;
+    position: absolute;
+}
+
+#header {
+    background: #F5DEB3;
+    width: 100%;
+    height: 80px;
+    text-align: center;
+    position: fixed;
 }
 
 #navigation {
     background: #FE9798;
-    width: 41%;
+    width: 40%;
     margin-left: 60%;
-    height: 50%;
+    height: 100%;
+    position: absolute;
 }
-
-/*#sidebar {
-     background: #40E0D0;
-     float: left;
-     width: 20%;
-     height: 280px;
-}*/
 
 #content {
     background: #DCDCDC;
-    float: right;
     width: 100%;
-    height: 100%;
+    height: 95%;
+    padding-top: 0px;
+    margin-top: 80px;   
 }
+
 
 #clear {
     clear: both;
@@ -54,5 +48,8 @@ body {
 #footer {
     background: #00BFFF;
     width: 100%;
-    height: 40px;
+    height: 84px;
+    position: inherit;
+    bottom: 0px;
+    top:95%;
 }
