--- a/css/styles.css
+++ b/css/styles.css
@@ -1,45 +1,108 @@
 
 body {
     background: #FFF;
-    color: #000;
+    color: #FFF;
     margin: 0px;
-    font-family: Arial, sans-serif;
+    font-family: Tahoma, sans-serif;
     font-size: 20px;
 }
 
 #container {
-    background: #FFD700;
-    /* margin: auto auto; */
+    background: #000;
     text-align: center;
     width: 100%;
-    height: 1500px;
+    height: 4500px;
     position: absolute;
 }
 
 #header {
-    background: #F5DEB3;
+    background: #1e2226;
     width: 100%;
     height: 80px;
     text-align: center;
+    cursor: auto;
     position: fixed;
+
+}
+#header a {
+    margin-left: 180px;
+    margin-right:  180px;
+    color: #FFF;
+    text-decoration: none;
+}
+#header a:hover {
+    color: #D72020;
+
+    text-decoration: underline;
+    cursor: pointer;
+
 }
 
-#navigation {
-    background: #FE9798;
-    width: 40%;
-    margin-left: 60%;
+#main {
+    background: #1e2226;
+    width: 20%;
+    margin-left: 10%;
+    height: 100%;
+    position: absolute;
+}
+ 
+
+
+#aboutUs {
+    background: #1e2226;
+    width: 20%;
+    margin-left: 30%;
     height: 100%;
     position: absolute;
 }
 
-#content {
-    background: #DCDCDC;
-    width: 100%;
-    height: 95%;
-    padding-top: 0px;
-    margin-top: 80px;   
+#examples {
+    background: #1e2226;
+    width: 20%;
+    margin-left: 50%;
+    height: 100%;
+    position: absolute;
 }
 
+#contacts {
+    background: #1e2226;
+    width: 20%;
+    margin-left: 70%;
+    height: 100%;
+    position: absolute;
+}
+
+#firstPage {
+    background: #001;
+    margin: auto auto;
+    width: 80%;
+    height: 24%;
+    padding-top: 0px;
+    margin-top: 80px;
+}
+
+#secondPage {
+    background: #002;
+    margin: auto auto;
+    width: 80%;
+    height: 24%;
+    padding-top: 0px;
+}
+
+#thirdPage {
+    background: #002;
+    margin: auto auto;
+    width: 80%;
+    height: 24%;
+    padding-top: 0px;
+}
+#fourthPage {
+    background: #002;
+    margin: auto auto;
+    width: 80%;
+    height: 24%;
+    padding-top: 0px;
+}
 
 #clear {
     clear: both;
@@ -48,8 +111,7 @@ body {
 #footer {
     background: #00BFFF;
     width: 100%;
-    height: 84px;
+    height: 2%;
     position: inherit;
-    bottom: 0px;
-    top:95%;
+    bottom: 0;
 }
