--- a/css/styles.css
+++ b/css/styles.css
@@ -4,8 +4,7 @@ body {
     color: #FFF;
     margin: 0px;
     font-family: Myriad Pro, semibold;
-    font-size: 35px;
-    
+    font-size: 35px; 
 }
 
 #container {
@@ -25,13 +24,16 @@ body {
     cursor: auto;
     position: fixed;
     min-width: 2100px;
+    z-index: 10;
 }
+
 #header div {
     background: #1e2226;
     width: 16%;
     height: 100%;
     position: absolute;
 }
+
 #header a {
     color: #FFF;
     text-decoration: none;
@@ -75,7 +77,7 @@ body {
     background-size: contain;
     margin: auto auto;
     width: 80%;
-    height: 20%;
+    height: 19.7%;
     padding-top: 0px;
     margin-top: 80px;
 }
@@ -103,7 +105,7 @@ body {
     background-size: contain;
     margin: auto auto;
     width: 80%;
-    height: 20%;
+    height: 19.7%;
     padding-top: 0px;
 }
 #description {
@@ -125,7 +127,7 @@ body {
     background: #000;
     margin: auto auto;
     width: 80%;
-    height: 20%;
+    height: 19.7%;
     padding-top: 0px;
 }
 #doSale {
@@ -135,7 +137,7 @@ body {
     background-size: contain;
     margin: auto auto;
     width: 80%;
-    height: 20%;
+    height: 19.7%;
     padding-top: 0px;
 }
 
@@ -146,18 +148,6 @@ body {
     background-size: contain;
     margin: auto auto;
     width: 80%;
-    height: 20%;
+    height: 19.7%;
     padding-top: 0px;
-}
-
-#clear {
-    clear: both;
-}
-
-#footer {
-    background: #00BFFF;
-    width: 100%;
-    height: 2%;
-    position: inherit;
-    bottom: 0;
 }
