--- a/css/gif.css
+++ b/css/gif.css
@@ -1,24 +1,27 @@
-.gif-with-play {
+/*.gif-with-play {
   background: url('../img/loading.gif') transparent no-repeat;
-}
- 
+}*/
+
 .gif-with-play:hover {
-  cursor: pointer;
-  opacity: 1;
-}
- 
-.gif-with-play{
-  clear: both;
-  opacity: .9;
-  height: 500px;
-  width: 500px;
-  background-size: contain;
+    cursor: pointer;
+    opacity: 1;
 }
 
- 
-/*.play.gif-with-play:hover {
-  opacity: .9;
-}*/
+.gif-with-play,
+.play.gif-with-play{
+    position: relative;
+    margin-top: 8%;
+    clear: left;
+    opacity: .6;
+    width: 49%;
+    display: inline-block;
+    background-size: contain;
+}
+
+
+.play.gif-with-play{
+    opacity: 1;
+}
 
 /* 
 .gif-with-play:before {
@@ -38,14 +41,14 @@
 .play.gif-with-play:before {
   background-color: rgba(255,255,255,0);
 }
- */
+*/
 /*.gif-with-play img {
   -webkit-transition: all  ease;
   -o-transition: all  ease;
   transition: all  ease;
 }*/
- 
- 
+
+
 /*@media screen and (max-width: 768px) {
   .gif-with-play:after,
   .play.gif-with-play:after {
