--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@ body {
     margin: 0px;
     font-family: Myriad Pro, semibold;
     font-size: 35px; 
+    
 }
 
 #container {
@@ -12,8 +13,8 @@ body {
     text-align: center;
     width: 100%;
     height: 5480px;
-    position: absolute;
-    min-width: 2100px;
+    position: absolute;  
+    min-width: 1600px;
 }
 
 #header {
@@ -23,8 +24,8 @@ body {
     text-align: center;
     cursor: auto;
     position: fixed;
-    min-width: 2100px;
     z-index: 10;
+    min-width: 1600px;
 }
 
 #header div {
@@ -81,9 +82,6 @@ body {
     padding-top: 0px;
     margin-top: 80px;
 }
-#mainPage img{
-    width: 100%;
-}
 #logo {
     text-align: center;
     padding-top: 25%;
@@ -130,8 +128,13 @@ body {
     height: 19.7%;
     padding-top: 0px;
 }
+#moreExamples a{
+    position: absolute;
+    z-index: 5;
+    margin-left: 34%;
+}
 #doSale {
-    /*background-image: url(../images/forthPage.png);*/
+    background-image: url(../images/thirdPage.png);
     background-color: #000;
     background-repeat: no-repeat;
     background-size: contain;
@@ -139,6 +142,35 @@ body {
     width: 80%;
     height: 19.7%;
     padding-top: 0px;
+}
+
+#doSale p{
+    position: relative;
+    font-size: 30px;
+    margin-top: 1%;
+    margin-bottom: 0;
+    margin-left: 10%;
+    text-align: left;
+}
+#doSale form{
+    width: 100%;
+    position: absolute;
+    clear: both;
+}
+#person{
+    position: inherit;
+    height: 30px;
+    width: 100px;
+    left: 10%;
+    top: 21%;
+    margin-left: 15%;
+}
+#address{
+    display: none;
+    position: absolute;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: 15%;
 }
 
 #contactsCompany {
