--- a/css/styles.css
+++ b/css/styles.css
@@ -178,19 +178,21 @@ body {
     height: 30px;
     width: 500px;
     top: 0;
+    border-radius: 4px;
     left: 0;
     font-size: 24px;
     margin-left: 0%;
 }
 
 .button {
-    background-color: #4CAF50;
+    background-color: #1e2226;
     border: none;
     color: white;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
-    font-size: 16px;
+    font-size: 20px;
+    border-radius: 8px;
     margin: 4px 2px;
     cursor: pointer;
 }
@@ -209,4 +211,19 @@ body {
     width: 80%;
     height: 19.7%;
     padding-top: 0px;
+}
+.infoBlock {
+    position: fixed;
+    width: 20%;
+    height: 150px;
+    text-align: center;
+    font-size: 30px;
+    background-color: #1e2226;
+    margin-top: 80px;
+    margin-left: 30%;
+    border-radius: 8px;
+    display: none;
+}
+.infoBlock a{
+    margin-top: 5px;
 }
