--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,11 @@
-
 body {
     background: #FFF;
     color: #FFF;
     margin: 0px;
     font-family: Myriad Pro, semibold;
     font-size: 35px; 
-
+    width: 100%;
+    min-width: 1600px;
 }
 
 #container {
@@ -83,6 +83,7 @@ body {
     margin-top: 80px;
 }
 #logo {
+    position: relative;
     text-align: center;
     padding-top: 25%;
     padding-left: 0%;
@@ -93,7 +94,6 @@ body {
         3px -3px 0 #000,
         -3px 3px 0 #000,
         3px 3px 0 #000;
-    margin: auto;
 }
 
 #aboutCompany {
@@ -152,26 +152,17 @@ body {
     text-align: left;
 }
 #doSale p[name="Person"]{
-    margin-top:1%;
+    margin-top: 25px;
 }
 #doSale p[name="email"]{
-    margin-top:5%;
+    margin-top: 100px;
 }
 #doSale form{
     width: 100%;
-    position: absolute;
-    clear: both;
-    min-width: 1920px;
     margin-top: 10%;
     margin-left: 5%;
 }
 
-.textbox[name="Person"] {
-    /*margin-top: 25px;*/
-}
-.textbox[name="Address"] {
-    /*margin-top: 80px;*/
-}
 .textbox{
     margin-top:40px;
     position: inherit;
@@ -190,6 +181,7 @@ body {
     color: white;
     padding: 15px 32px;
     text-align: center;
+    outline: none;
     text-decoration: none;
     font-size: 20px;
     border-radius: 8px;
@@ -197,9 +189,16 @@ body {
     cursor: pointer;
 }
 .button[name="Send"]{
+    margin-top: -4%;
+    margin-left: 120%;
+}
+.button[name="Examples"]{
+    z-index: 4;
     position: absolute;
-    top: 100px;
-    left: 540px;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
 }
 
 #contactsCompany {
@@ -223,4 +222,36 @@ body {
     margin-left: 30%;
     border-radius: 8px;
     display: none;
+}
+#catalog{
+    width: 90%;
+    height: 90%;
+    margin: 50px auto;
+    display: none;
+    background: #1e2226;;
+    z-index: 200;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    padding: 16px;
+}
+#catalog img[name="Close"]{
+    margin-left: 97%;
+    margin-top: 4px;
+    cursor: pointer;
+}
+#wrap {
+    display: none;
+    opacity: 0.8;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    padding: 16px;
+    background-color: rgba(1, 1, 1, 0.725);
+    z-index: 100;
+    overflow: auto;
 }
