--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,6 @@ body {
     font-family: Myriad Pro, semibold;
     font-size: 35px; 
     width: 100%;
-    min-width: 1600px;
 }
 
 #container {
@@ -14,7 +13,6 @@ body {
     width: 100%;
     height: 5480px;
     position: absolute;  
-    min-width: 1600px;
 }
 
 #header {
@@ -25,7 +23,6 @@ body {
     cursor: auto;
     position: fixed;
     z-index: 10;
-    min-width: 1600px;
 }
 
 #header div {
@@ -114,11 +111,23 @@ body {
     text-align: left;
     font-size: 28px;
     text-indent: 60px;
+    margin-left: 50%
 }
 
-#video {
-    padding-top: 13%;
+.thumb-wrap {
+    position: relative;
+    padding-bottom: 56.25%; /* задаёт высоту контейнера для 16:9 (если 4:3 — поставьте 75%) */
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
     float: left;
+}
+.thumb-wrap iframe {
+    position: absolute;
+    top: 20%;
+    left: 0;
+    width: 50%;
+    height: 50%;
 }
 
 #moreExamples {
@@ -165,14 +174,22 @@ body {
 
 .textbox{
     margin-top:40px;
-    position: inherit;
+    position: absolute;
     height: 30px;
-    width: 500px;
-    top: 0;
+    width: 20%;
     border-radius: 4px;
     left: 0;
     font-size: 24px;
     margin-left: 0%;
+}
+.textbox[name="Person"]{
+    margin-top: 65px;
+    margin-left: 24%;
+
+}
+.textbox[name="Address"]{
+    margin-top: 140px;
+    margin-left: 24%;
 }
 
 .button {
@@ -189,8 +206,7 @@ body {
     cursor: pointer;
 }
 .button[name="Send"]{
-    margin-top: -4%;
-    margin-left: 120%;
+    margin-top: 120px;
 }
 .button[name="Examples"]{
     z-index: 4;
@@ -239,9 +255,33 @@ body {
     padding: 16px;
 }
 #catalog img[name="Close"]{
-    margin-left: 97%;
+    margin-left: 42%;
     margin-top: 4px;
+    position: fixed;
     cursor: pointer;
+}
+.element {
+    width: 100%;
+    height: 635px;
+}
+.element p{
+    margin-left: 35%;
+    text-align: left;
+    margin-bottom: 0%;
+    margin-top: 8px;
+    font-size: 90%;
+}
+
+.element p[name="Name"]{
+    padding-top: 0%;
+    font-size: 150%;
+}
+.element img{
+    position: absolute;
+    left: 2%;
+    height: 74%;
+    width: 32%;
+    max-height: 635px;
 }
 #wrap {
     display: none;
