--- a/css/gif.css
+++ b/css/gif.css
@@ -1,6 +1,3 @@
-/*.gif-with-play {
-  background: url('../img/loading.gif') transparent no-repeat;
-}*/
 
 .gif-with-play:hover {
     cursor: pointer;
@@ -10,49 +7,25 @@
 .gif-with-play,
 .play.gif-with-play{
     position: relative;
-    margin-top: 8%;
-    clear: left;
+    margin-top: 4%;
     opacity: .6;
-    width: 49%;
+     width: 49%; 
+    /* height: 30%; */
+    max-height: 323px;
+    margin-bottom: 5%;
     display: inline-block;
-    background-size: contain;
+}
+
+.gif-with-play img,
+.play.gif-with-play img{
+    position: relative;
+    /* left: 20%; */
+    width: 50%;
+    /* width: 50%; */
+    height: auto;
 }
 
 
 .play.gif-with-play{
     opacity: 1;
 }
-
-/* 
-.gif-with-play:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background-color: rgba(255,255,255,.7);
-  z-index: 10;
-  -webkit-transition: all  ease;
-  -o-transition: all  ease;
-  transition: all  ease;
-}
- 
-.play.gif-with-play:before {
-  background-color: rgba(255,255,255,0);
-}
-*/
-/*.gif-with-play img {
-  -webkit-transition: all  ease;
-  -o-transition: all  ease;
-  transition: all  ease;
-}*/
-
-
-/*@media screen and (max-width: 768px) {
-  .gif-with-play:after,
-  .play.gif-with-play:after {
-    height: 60px;
-    width: 60px;
-  }
-}*/
