--- a/css/styles.css
+++ b/css/styles.css
@@ -3,10 +3,12 @@ body {
     color: #FFF;
     margin: 0px;
     font-family: Myriad Pro, semibold;
-    font-size: 35px; 
+    font-size: 34px; 
     width: 100%;
 }
-
+p{
+    font-size: 1.5vw; 
+}
 #container {
     background: #000;
     text-align: center;
@@ -14,16 +16,29 @@ body {
     height: 5480px;
     position: absolute;  
 }
-
-#header {
-    background: #1e2226;
-    width: 100%;
-    height: 80px;
-    text-align: center;
-    cursor: auto;
-    position: fixed;
-    z-index: 10;
-}
+/*@media(min-width: 1330){*/
+    #header {
+        background: #1e2226;
+        width: 100%;
+        height: 80px;
+        text-align: center;
+        cursor: auto;
+        position: fixed;
+        z-index: 10;
+    }
+/*}
+@media(max-width: 1330){
+    #header {
+        background: #1e2226;
+        width: 100%;
+        height: 40px;
+        font-size: 25px; 
+        text-align: center;
+        cursor: auto;
+        position: fixed;
+        z-index: 10;
+    }
+}*/
 
 #header div {
     background: #1e2226;
@@ -40,6 +55,7 @@ body {
     background: #1e2226;
     width: 100%;
     height: 100%;
+    font-size: 34px; 
     position: absolute;
     left: 0%;
 }
@@ -73,7 +89,7 @@ body {
     background-color: #000;
     background-repeat: no-repeat;
     background-size: contain;
-    margin: auto auto;
+    margin:0 auto;
     width: 80%;
     height: 19.7%;
     padding-top: 0px;
@@ -85,7 +101,7 @@ body {
     padding-top: 25%;
     padding-left: 0%;
     font-family: Mistral;
-    font-size: 100px;
+    font-size: 8vw; 
     text-shadow:
         -3px -3px 0 #000,
         3px -3px 0 #000,
@@ -98,7 +114,7 @@ body {
     background-color: #000;
     background-repeat: no-repeat;
     background-size: contain;
-    margin: auto auto;
+    margin:0 auto;
     width: 80%;
     height: 19.7%;
     padding-top: 0px;
@@ -147,7 +163,7 @@ body {
     background-color: #000;
     background-repeat: no-repeat;
     background-size: contain;
-    margin: auto auto;
+    margin:0 auto;
     width: 80%;
     height: 19.7%;
     padding-top: 0px;
@@ -270,7 +286,7 @@ body {
 }
 .element {
     width: 100%;
-    height: 635px;
+    height: 80%
 }
 .element p{
     margin-left: 35%;
