--- a/css/styles2.css
+++ b/css/styles2.css
@@ -1,53 +1,32 @@
 body {
-    background: #000;
+    background: #FFF;
     color: #FFF;
-    font-family: Myriad Pro, sans-serif;
-    font-size: 12px; 
-    font-weight: normal;
-    padding-top: 50px;
-}
-.menu{
-    border: 0;
-    background-color: #1e2226; 
-}
-.navbar-default .navbar-nav>li{
-    width: 20%;
-}
-.navbar-default .navbar-nav>li>a{
-    color: #FFF;
-    padding: 15px 0;
-    text-decoration: none;
-    text-align: center;
-    font-size: 25px;
-    text-transform: uppercase;
-}
-.navbar-default .navbar-nav>li>a:hover{
-    cursor: pointer;
-    background: #323940;
-    color: #FFF; 
-}
-.links{
+    margin: 0px;
+    font-family: Myriad Pro, semibold;
+    font-size: 34px; 
     width: 100%;
 }
-
-/*#container {
+p{
+    font-size: 1.5vw; 
+}
+#container {
     background: #000;
     text-align: center;
     width: 100%;
     height: 5480px;
     position: absolute;  
 }
-@media(min-width: 1330){
-#header {
-    background: #1e2226;
-    width: 100%;
-    height: 80px;
-    text-align: center;
-    cursor: auto;
-    position: fixed;
-    z-index: 10;
-}
-}
+/*@media(min-width: 1330){*/
+    #header {
+        background: #1e2226;
+        width: 100%;
+        height: 80px;
+        text-align: center;
+        cursor: auto;
+        position: fixed;
+        z-index: 10;
+    }
+/*}
 @media(max-width: 1330){
     #header {
         background: #1e2226;
@@ -59,26 +38,51 @@ body {
         position: fixed;
         z-index: 10;
     }
+}*/
+
+#header div {
+    background: #1e2226;
+    width: 16%;
+    height: 100%;
+    position: absolute;
 }
 
-*/
-
-
-/*header a {
+#header a {
     color: #FFF;
     text-decoration: none;
     text-align: center;
+    line-height: 250%;
     background: #1e2226;
+    width: 100%;
+    height: 100%;
     font-size: 34px; 
     position: absolute;
     left: 0%;
 }
-header a:hover {
+#header a:hover {
     cursor: pointer;
     background: #323940;
-}*/
+}
 
-/*
+#main {
+    margin-left: 10%;
+}
+
+#aboutUs {
+    margin-left: 26%;
+}
+
+#examples {
+    margin-left: 42%;
+}
+
+#order {
+    margin-left: 58%;
+}
+
+#contacts {
+    margin-left: 74%;
+}
 
 #mainPage {    
     background-image: url(../images/firstPage.png);
@@ -128,7 +132,7 @@ header a:hover {
 
 .thumb-wrap {
     position: relative;
-    padding-bottom: 56.25%;  задаёт высоту контейнера для 16:9 (если 4:3 — поставьте 75%) 
+    padding-bottom: 56.25%; /* задаёт высоту контейнера для 16:9 (если 4:3 — поставьте 75%) */
     padding-top: 30px;
     height: 0;
     overflow: hidden;
@@ -226,14 +230,14 @@ header a:hover {
 }
 .button[name="Examples"]{
     z-index: 4;
-     position: absolute; 
-     margin-top: 20%; 
+    /* position: absolute; */
+    /* margin-top: 20%; */
     margin-left: 50%;
     margin-right: 50%;
-     left: 50%; 
-     margin-right: -50%; 
+    /* left: 50%; */
+    /* margin-right: -50%; */
     transform: translate(-50%, -50%);
-     display: flex; 
+    /* display: flex; */
 
 }
 
@@ -317,7 +321,7 @@ header a:hover {
     overflow: auto;
 }
 
-scrollbar {
+/*scrollbar {
 width: 25px;
 height: 12px;
 }
