--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1608,7 +1608,7 @@ pre code {
   margin-right: auto;
   margin-left: auto;
 }
-.row {
+.rows {
   margin-right: -15px;
   margin-left: -15px;
 }
@@ -6466,8 +6466,8 @@ button.close {
 .container:after,
 .container-fluid:before,
 .container-fluid:after,
-.row:before,
-.row:after,
+.rows:before,
+.rows:after,
 .form-horizontal .form-group:before,
 .form-horizontal .form-group:after,
 .btn-toolbar:before,
@@ -6497,7 +6497,7 @@ button.close {
 .dl-horizontal dd:after,
 .container:after,
 .container-fluid:after,
-.row:after,
+.rows:after,
 .form-horizontal .form-group:after,
 .btn-toolbar:after,
 .btn-group-vertical > .btn-group:after,
