--- a/css/styles.css
+++ b/css/styles.css
@@ -112,12 +112,38 @@ body {
     display: none;
 }
 
+.gif-with-play img:hover {
+    cursor: pointer;
+    opacity: 1;
+}
+
+.gif-with-play img,
+.play.gif-with-play img{
+    opacity: .6;
+}
+
+.gif-with-play img,
+.play.gif-with-play img{
+    width: 500px;
+    height: 331px;
+    margin-top: 50px;
+}
+
+
+.play.gif-with-play img{
+    opacity: 1;
+}
+
 @media screen and (max-width: 1199.5px)
 {
     #description {
         margin-top: 70px;
         margin-left: 500px;
-
+    }
+    .gif-with-play img,
+    .play.gif-with-play img{
+        width: 400px;
+        height: 275px;
     }
     .logo a{
         font-size: 100px;
@@ -125,6 +151,11 @@ body {
 }
 @media screen and (max-width: 992px)
 {
+    .gif-with-play img,
+    .play.gif-with-play img{
+        width: 250px;
+        height: 140px;
+    }
     .navbar-default .navbar-nav>li>a{
         font-size: 16px;
     }
@@ -143,6 +174,18 @@ body {
 
 @media screen and (max-width: 767.5px)
 {
+    .gif-with-play img,
+    .play.gif-with-play img{
+        opacity: 1;
+    }
+    .gif-with-play img,
+    .play.gif-with-play img{
+        width: 250px;
+        height: 140px;
+    }
+    .myshow{
+        display: none;
+    }
     .logo[name="Logo"]{
         display: block;
         font-family: Mistral;
@@ -163,7 +206,7 @@ body {
         margin-top: 20px;
     }
     .thumb-wrap{
-        margin-top: 200px;
+        margin-top: 220px;
     }
     #description {
         margin-left: 0;
@@ -173,6 +216,7 @@ body {
     .thumb-wrap iframe {
         width: 100%;
         height: 100%;
+        top: 0;
     }
     .mycon{
         width:500px;
