--- a/css/styles.css
+++ b/css/styles.css
@@ -127,7 +127,6 @@ body {
 .play.gif-with-play img{
     width: 500px;
     height: 331px;
-    margin-top: 50px;
 }
 
 .play.gif-with-play img{
@@ -135,29 +134,141 @@ body {
 }
 
 .button {
-    /*    background-color: #1e2226;
-        border: none;
-        color: white;
-        padding: 15px 32px;
-        text-align: center;
-        outline: none;
-        text-decoration: none;
-        font-size: 20px;
-        border-radius: 8px;
-        margin: 4px 2px;*/
-
+    background-color: #1e2226;
+    border: none;
+    color: white;
+    outline: none;
+    text-decoration: none;
+}
+.button:hover{
+    background-color: #323940;
+    color: white;
+}
+.button:focus{
+    background-color: #1e2226;
+    color: white;
 }
 .button[name="Send"]{
     margin-top: 120px;
 }
+
 .button[name="Examples"]{
     z-index: 4;
-    
-
+    position: relative;
+    top: 350px;
 }
 
+#catalog{
+    width: 90%;
+    height: 90%;
+    margin: 50px auto;
+    display: none;
+    background: #1e2226;;
+    z-index: 200;
+    overflow: auto;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    padding: 16px;
+}
+#catalog img[name="Close"]{
+    margin-right: 100px;
+    right: 0;
+    margin-top: 4px;
+    position: fixed;
+    cursor: pointer;
+}
+.element {
+    width: 100%;
+    height: auto;
+    margin-bottom: 50px;
+}
+.element p{
+    margin-left: 450px;
+    text-align: left;
+    width: 800px;
+    margin-bottom: 0%;
+    margin-top: 8px;
+    font-size: 16px;
+}
+
+.element p[name="Name"]{
+    margin-top: 0;
+    font-size: 26px;
+}
+.element img{
+    margin-top: 40px;
+    position: absolute;
+    left: 100px;
+    width: 200px;
+    height: auto;
+}
+#wrap {
+    display: none;
+    opacity: 0.8;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    padding: 16px;
+    background-color: rgba(1, 1, 1, 0.725);
+    z-index: 100;
+    overflow: auto;
+}
+
+@media screen and (max-width: 1500px)
+{
+    #catalog img[name="Close"]{
+        margin-right: 90px;
+    }
+    .element p{
+        margin-left: 350px;
+        width: 650px;
+        font-size: 15px;
+    }
+
+    .element img{
+        left: 60px;
+    }
+}
+@media screen and (max-width: 1218px)
+{
+    #catalog img[name="Close"]{
+        margin-right: 80px;
+    }
+    .element p{
+        margin-left: 300px;
+        width: 650px;
+        font-size: 14px;
+    }
+
+    .element img{
+        left: 30px;
+        
+    }
+}
 @media screen and (max-width: 1199.5px)
 {
+    #catalog img[name="Close"]{
+        margin-right: 70px;
+    }
+    .element p{
+        margin-left: 215px;
+        width: 600px;
+        font-size: 13px;
+    }
+
+    .element img{
+        left: 15px;
+        width: 200px;
+    }
+
+    .button[name="Examples"]{
+        top: 290px
+    }
     #description {
         margin-top: 70px;
         margin-left: 500px;
@@ -173,6 +284,25 @@ body {
 }
 @media screen and (max-width: 992px)
 {
+    #description p[name="Title"]{
+        font-size: 20px;
+    }
+    #catalog img[name="Close"]{
+        margin-right: 60px;
+    }
+    .element p{
+        margin-left: 115px;
+        width: 400px;
+        font-size: 12px;
+    }
+
+    .element img{
+        width: 100px;
+    }
+
+    .button[name="Examples"]{
+        top: 160px;
+    }
     .gif-with-play img,
     .play.gif-with-play img{
         width: 250px;
@@ -193,21 +323,22 @@ body {
         font-size: 70px;
     }
 }
-
 @media screen and (max-width: 767.5px)
 {
+    .button[name="Examples"]{
+        top: 20px;
+    }
     .gif-with-play img,
     .play.gif-with-play img{
         opacity: 1;
     }
     .gif-with-play img,
     .play.gif-with-play img{
+        margin-top: 50px;     
         width: 250px;
         height: 140px;
     }
-    .myshow{
-        display: none;
-    }
+
     .logo[name="Logo"]{
         display: block;
         font-family: 'Marck Script', cursive;
@@ -224,7 +355,9 @@ body {
     }
     #description p[name="Title"]
     {
-        font-size: initial;
+        text-align: center;
+        font-size: 18px;
+        text-indent: 0;
         margin-top: 20px;
     }
     .thumb-wrap{
@@ -236,8 +369,10 @@ body {
         margin-top: 0;
     }
     .thumb-wrap iframe {
-        width: 100%;
-        height: 100%;
+        width: 90%;
+        height: 80%;
+        left: 47px;
+        margin: 0 auto;
         top: 0;
     }
     .mycon{
@@ -262,11 +397,20 @@ body {
     }
 }
 
-@media screen and (max-width: 425px)
+@media screen and (max-width: 670px)
 {
-
-    .mycon{
-        width:500px;
+    #catalog img[name="Close"]{
+        margin-top: -10px;
+        margin-right: 35px;
+        width: 30px
+    }
+    .element p[name="Name"]{
+        margin-top: 0;
+        font-size: 18px;
+    }
+    .element p{
+        width: 300px;
+        font-size: 11px;
     }
 }
 
