--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,8 @@ body {
     background: #000;
     color: #FFF;
     text-align: center;
-    font-family: 'Fira Sans', sans-serif;
-    /*font-family: Myriad Pro, sans-serif;*/
+    /*font-family: 'Fira Sans', sans-serif;*/
+    font-family: Myriad Pro, sans-serif;
     font-size: 12px; 
     font-weight: normal;
     padding-top: 50px;
@@ -98,7 +98,8 @@ body {
 }
 .logo a{
     color: #fff;
-    font-family: 'Marck Script', cursive;
+    font-family: Mistral;
+    /*font-family: 'Marck Script', cursive;*/
     font-size: 140px; 
     text-shadow:
         -3px -3px 0 #000,
@@ -240,6 +241,16 @@ body {
 }
 .infoBlock a:hover{
     text-decoration: none;   
+}
+#contactsCompany {
+    text-indent: 60px;
+    font-size: 20px;
+}
+#contactsCompany p{
+    position: relative;
+    margin: 0 auto;
+    text-indent: 0;
+    text-align: center;
 }
 
 @media screen and (max-width: 1500px)
